--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
             republikou. A to konkrétně v <span class="fw-bold">Praze, Brně</span> a <span class="fw-bold">Ostravě</span>.
             Z našich služeb můžete rovněž využít i tzv. <span class="fw-bold">Online coaching</span>.
         </p>
+        <p class="lead mb-4 text-justify">
+            Prohlédněte si <span class="fw-bold">ceník</span> včetně služeb kliknutím na Vaše město.
+        </p>
     </div>
 
     <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5">
@@ -492,7 +495,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individuální lekce</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">799 Kč/hod</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">899 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -511,7 +514,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Lekce pro dvojice</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">899 Kč/hod</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">999 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -530,7 +533,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Skupinové lekce</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">999 Kč/hod</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">1099 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -566,7 +569,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Rozbor techniky</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">1999 Kč</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">2499 Kč</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3 text-justify long-text">
@@ -583,6 +586,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row row-cols-1 align-items-stretch pb-3">
+                <h6 class="modal-title text-muted wh-100 text-center">
+                    <span class="small">**Ceník je platný od 01.02.2023</span>
+                </h6>
             </div>
         </div>
     </div>
@@ -602,7 +610,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individuální lekce</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">599 Kč/hod</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">699 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -621,7 +629,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Lekce pro dvojice</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">699 Kč/hod</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">799 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -640,7 +648,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Skupinové lekce</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">749 Kč/hod</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">899 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -676,7 +684,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Rozbor techniky</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">1999 Kč</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">2499 Kč</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3 text-justify long-text">
@@ -693,6 +701,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row row-cols-1 align-items-stretch pb-3">
+                <h6 class="modal-title text-muted wh-100 text-center">
+                    <span class="small">**Ceník je platný od 01.02.2023</span>
+                </h6>
             </div>
         </div>
     </div>
@@ -712,7 +725,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-3 display-6 lh-1 fw-bold pr-2">Individuální lekce</p>
-                                    <p class="mb-3 display-cust lh-1 fw-bold">599 Kč/hod</p>
+                                    <p class="mb-3 display-cust lh-1 fw-bold">649 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -750,7 +763,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Skupinové lekce</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">749 Kč/hod</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">799 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -786,7 +799,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Rozbor techniky</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">1999 Kč</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">2499 Kč</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3 text-justify long-text">
@@ -803,6 +816,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row row-cols-1 align-items-stretch pb-3">
+                <h6 class="modal-title text-muted wh-100 text-center">
+                    <span class="small">**Ceník je platný od 01.02.2023</span>
+                </h6>
             </div>
         </div>
     </div>
@@ -839,6 +857,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row row-cols-1 align-items-stretch pb-3">
+                <h6 class="modal-title text-muted wh-100 text-center">
+                    <span class="small">**Ceník je platný od 01.02.2023</span>
+                </h6>
             </div>
         </div>
     </div>
