--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </p>
     </div>
 
-    <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5">
+    <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5 pt-2">
         <div class="col">
             <button id="prague" type="button" class="btn-no-style" data-bs-toggle="modal" data-bs-target="#PragueModal">
                 <div class="card card-cover h-100 overflow-hidden text-white rounded-5 shadow-lg" style="background-image: url('static/images/services/prague.webp');">
