--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <li class="nav-item"><a href="#home" class="nav-link bg-color-es text-white" aria-current="page">Domů</a></li>
             <li class="nav-item"><a href="#about" class="nav-link link-hover text-dark">O nás</a></li>
             <li class="nav-item"><a href="#services" class="nav-link link-hover text-dark">Služby</a></li>
+            <li class="nav-item"><a href="#career" class="nav-link link-hover text-dark">Kariéra</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link link-hover text-dark">Kontakt</a></li>
         </ul>
     </header>
@@ -131,7 +132,6 @@
         </div>
         <div class="col-lg-6">
             <p class="display-5 fw-bold lh-1 py-3">O nás</p>
-            <p class="lead text-justify">
             <p class="lead text-justify">Organizace Element swimming byla založena Dominikem Vavrečkou, který jí rovněž vede a udává její směr už od roku
                 2019.<br><br>
                 Dominik je sportovec tělem i duší a sport je jeho součástí. Byl členem v Klubu plaveckých sportů Ostrava, ve kterém působil po dobu 10 let své
@@ -251,6 +251,29 @@
                     </div>
                 </div>
             </button>
+        </div>
+    </div>
+</div>
+
+<div id="career" class="container col-xxl-10 px-4 py-5 border-bottom">
+    <div class="row row-cols-1 row-cols-lg-2 flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
+        <div class="col-10">
+            <img src="static/images/main/career.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-5 shadow-lg section-image"
+                 title="Trenéři Elements Swimming" alt="Trenéři Elements Swimming">
+        </div>
+        <div class="col-lg-6">
+            <p class="display-5 fw-bold lh-1 py-3">Kariéra</p>
+            <p class="lead text-justify">
+                Začni u nás kariéru stejně tak, jako třeba tví budoucí kolegové. Jsme rychle rozvíjející se organizace, která ti pomůže s tím, co je v
+                trenérské profesi nejtěžší - a to je tvorba klientely.
+            </p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3 pt-5 justify-content-center buttons">
+                <a href="#contact">
+                    <button type="button" class="btn bg-color-es btn-lg px-4 me-sm-3 text-white">
+                        Více informací
+                    </button>
+                </a>
+            </div>
         </div>
     </div>
 </div>
@@ -459,7 +482,7 @@
 <!-- Footer -->
 <div class="container">
     <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top">
-        <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2021 Element swimming | <a class="light-gray no-decoration"
+        <p class="col-12 col-md-4 mb-0 text-muted">&copy; 2023 Element swimming | <a class="light-gray no-decoration"
                                                                                      href="https://www.linkedin.com/in/michael-sláma-a195641a0/">Michael
             Sláma</a></p>
 
@@ -471,6 +494,7 @@
             <li class="nav-item"><a href="#home" class="nav-link px-2 text-muted">Domů</a></li>
             <li class="nav-item"><a href="#about" class="nav-link px-2 text-muted">O nás</a></li>
             <li class="nav-item"><a href="#services" class="nav-link px-2 text-muted">Služby</a></li>
+            <li class="nav-item"><a href="#career" class="nav-link px-2 text-muted">Kariéra</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link px-2 text-muted">Kontakt</a></li>
         </ul>
         <div class="col-12 text-center py-3 cookies-consent">
