--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <div class="row row-cols-1 row-cols-lg-2 flex-lg-row-reverse align-items-center g-5 py-5 justify-content-center">
         <div class="col-10">
             <img src="static/images/main/career.webp" class="d-block mx-lg-auto img-fluid img-fluid-cust border rounded-5 shadow-lg section-image"
-                 title="Trenéři Elements Swimming" alt="Trenéři Elements Swimming">
+                 title="Trenéři Element Swimming" alt="Trenéři Element Swimming">
         </div>
         <div class="col-lg-6">
             <p class="display-5 fw-bold lh-1 py-3">Kariéra</p>
