--- a/index.html
+++ b/index.html
@@ -611,9 +611,24 @@
                     </div>
                 </div>
             </div>
-            <div class="row row-cols-1 align-items-stretch pb-3">
-                <h6 class="modal-title text-muted wh-100 text-center">
+            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
+                <h6 class="modal-title text-muted wh-100">
                     <span class="small">**Ceník je platný od 01.02.2023</span>
+                </h6>
+                <h6 class="modal-title text-muted wh-100">
+                    <span class="small">
+                        **Pravidla pro lekce všeho druhu - objednanou lekci lze zrušit nejpozději
+                        do 24 hodin před lekcí. V případě, že klient zruší trénink v den jeho konání
+                        uhradí klient storno poplatek v plné výši ceny lekce. V případě, že je zrušení
+                        tréninku v daný den na naší straně, má klient příští trénink zdarma.
+                    </span>
+                </h6>
+                <h6 class="modal-title text-muted wh-100">
+                    <span class="small">
+                        **Pravidla pro vouchery všeho druhu -  nevyčerpané vouchery se berou jako
+                        propadlé tehdy, kdy se klient se zakoupeným voucherem neozve vzhledem k datu
+                        platnosti voucheru - voucher se proto bere jako neplatný/propadlý.
+                    </span>
                 </h6>
             </div>
         </div>
@@ -726,9 +741,24 @@
                     </div>
                 </div>
             </div>
-            <div class="row row-cols-1 align-items-stretch pb-3">
-                <h6 class="modal-title text-muted wh-100 text-center">
+            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
+                <h6 class="modal-title text-muted wh-100">
                     <span class="small">**Ceník je platný od 01.02.2023</span>
+                </h6>
+                <h6 class="modal-title text-muted wh-100">
+                    <span class="small">
+                        **Pravidla pro lekce všeho druhu - objednanou lekci lze zrušit nejpozději
+                        do 24 hodin před lekcí. V případě, že klient zruší trénink v den jeho konání
+                        uhradí klient storno poplatek v plné výši ceny lekce. V případě, že je zrušení
+                        tréninku v daný den na naší straně, má klient příští trénink zdarma.
+                    </span>
+                </h6>
+                <h6 class="modal-title text-muted wh-100">
+                    <span class="small">
+                        **Pravidla pro vouchery všeho druhu -  nevyčerpané vouchery se berou jako
+                        propadlé tehdy, kdy se klient se zakoupeným voucherem neozve vzhledem k datu
+                        platnosti voucheru - voucher se proto bere jako neplatný/propadlý.
+                    </span>
                 </h6>
             </div>
         </div>
@@ -841,9 +871,24 @@
                     </div>
                 </div>
             </div>
-            <div class="row row-cols-1 align-items-stretch pb-3">
-                <h6 class="modal-title text-muted wh-100 text-center">
+            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
+                <h6 class="modal-title text-muted wh-100">
                     <span class="small">**Ceník je platný od 01.02.2023</span>
+                </h6>
+                <h6 class="modal-title text-muted wh-100">
+                    <span class="small">
+                        **Pravidla pro lekce všeho druhu - objednanou lekci lze zrušit nejpozději
+                        do 24 hodin před lekcí. V případě, že klient zruší trénink v den jeho konání
+                        uhradí klient storno poplatek v plné výši ceny lekce. V případě, že je zrušení
+                        tréninku v daný den na naší straně, má klient příští trénink zdarma.
+                    </span>
+                </h6>
+                <h6 class="modal-title text-muted wh-100">
+                    <span class="small">
+                        **Pravidla pro vouchery všeho druhu -  nevyčerpané vouchery se berou jako
+                        propadlé tehdy, kdy se klient se zakoupeným voucherem neozve vzhledem k datu
+                        platnosti voucheru - voucher se proto bere jako neplatný/propadlý.
+                    </span>
                 </h6>
             </div>
         </div>
@@ -882,9 +927,24 @@
                     </div>
                 </div>
             </div>
-            <div class="row row-cols-1 align-items-stretch pb-3">
-                <h6 class="modal-title text-muted wh-100 text-center">
+            <div class="row row-cols-1 align-items-stretch pb-3 px-4 g-2">
+                <h6 class="modal-title text-muted wh-100">
                     <span class="small">**Ceník je platný od 01.02.2023</span>
+                </h6>
+                <h6 class="modal-title text-muted wh-100">
+                    <span class="small">
+                        **Pravidla pro lekce všeho druhu - objednanou lekci lze zrušit nejpozději
+                        do 24 hodin před lekcí. V případě, že klient zruší trénink v den jeho konání
+                        uhradí klient storno poplatek v plné výši ceny lekce. V případě, že je zrušení
+                        tréninku v daný den na naší straně, má klient příští trénink zdarma.
+                    </span>
+                </h6>
+                <h6 class="modal-title text-muted wh-100">
+                    <span class="small">
+                        **Pravidla pro vouchery všeho druhu -  nevyčerpané vouchery se berou jako
+                        propadlé tehdy, kdy se klient se zakoupeným voucherem neozve vzhledem k datu
+                        platnosti voucheru - voucher se proto bere jako neplatný/propadlý.
+                    </span>
                 </h6>
             </div>
         </div>
