--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 <div class="row row-cols-1 align-items-stretch pb-3">
                     <div class="col">
                         <div class="card card-cover h-90 overflow-hidden text-white bg-color-es rounded-5 shadow-lg">
-                            <div class="d-flex flex-column h-50 p-5 pt-4 pb-3 text-white text-shadow-1">
+                            <div class="d-flex flex-column h-50 p-5 pb-3 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Voucher</p>
                                 </div>
