Adjust price for groups

--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Skupinové lekce</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">1499 Kč/hod</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">Od 1499 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -804,7 +804,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Skupinové lekce</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">899 Kč/hod</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">Od 899 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
@@ -948,7 +948,7 @@
                             <div class="d-flex flex-column h-50 p-5 pb-4 text-white text-shadow-1">
                                 <div class="d-flex justify-content-between flex-wrap align-items-center">
                                     <p class="mb-4 display-6 lh-1 fw-bold">Skupinové lekce</p>
-                                    <p class="mb-4 display-cust lh-1 fw-bold">799 Kč/hod</p>
+                                    <p class="mb-4 display-cust lh-1 fw-bold">Od 799 Kč/hod</p>
                                 </div>
                                 <ul class="d-flex list-unstyled mt-auto">
                                     <li class="d-flex align-items-center me-3">
