SCPAP for Fitness clinic

--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
             <img src="static/images/cooperation/csps.webp" title="Český Svaz Plaveckých Sportů"
                  alt="Český Svaz Plaveckých Sportů - Logo" class="bi me-2" width="200"/>
         </a>
-        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.fitnessclinic.cz">
-            <img src="static/images/cooperation/fitness_clinic.webp" title="Fitness Clinic"
-                 alt="Fitness Clinic - Logo" class="bi me-2" width="200"/>
+        <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.scpap.cz">
+            <img src="static/images/cooperation/scpap.webp" title="Sport Club Plavecký Areál Pardubice"
+                 alt="SCPAP - Logo" class="bi me-2" width="200"/>
         </a>
         <a class="col d-flex align-items-start cooperation-logo justify-content-center py-3" href="https://www.fyzioterapeut-ostrava.cz">
             <img src="static/images/cooperation/fyz_ostrava.webp" title="Fyzioterapeut Ostrava"
