--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
             <li class="nav-item"><a href="#services" class="nav-link link-hover text-dark">Služby</a></li>
             <li class="nav-item"><a href="#career" class="nav-link link-hover text-dark">Kariéra</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link link-hover text-dark">Kontakt</a></li>
+            <li class="nav-item">
+                <a href="index_en.html" class="nav-link text-dark">
+                    <img src="static/images/icons/uk_lan.png" title="English language" alt="English language" class="bi me-3" width="28" height="25"/>
+                </a>
+            </li>
         </ul>
     </header>
 </div>
