--- a/index_en.html
+++ b/index_en.html
@@ -88,6 +88,11 @@
             <li class="nav-item"><a href="#services" class="nav-link link-hover text-dark">Services</a></li>
             <li class="nav-item"><a href="#career" class="nav-link link-hover text-dark">Career</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link link-hover text-dark">Contact</a></li>
+            <li class="nav-item">
+                <a href="index.html" class="nav-link text-dark">
+                    <img src="static/images/icons/cz_lan.png" title="Czech language" alt="Czech language" class="bi me-3" width="28" height="25"/>
+                </a>
+            </li>
         </ul>
     </header>
 </div>
